# apriomics

./: .gitignore  README.md  package-lock.json  pyproject.toml  test_hmdb_interactive.py
apriomics/: __init__.py  build_signed_edges.py  hmdb_utils.py  kegg_utils.py  literature.py  llm-lasso.py  priors.py
apriomics/utils/: fingerprints.py
docs/: _quarto.yml  _sidebar.yml  objects.json
docs/_site/: about.html  index.html  llm-priors.html  search.json
docs/_site/examples/: build_signed_edges.html  build_signed_edges.md  mtsbl1-analysis.html
docs/_site/reference/: PriorData.html  get_smiles.html  index.html
docs/_site/site_libs/bootstrap/: bootstrap-7c34f6b8daaf82f8239f69320d90f8e6.min.css
docs/examples/: kegg_reaction_priors.qmd  mtsbl1-analysis.qmd
docs/examples/data/: i_Investigation.txt  s_MTBLS1.txt
docs/reference/: index.qmd
docs/src/: llm-priors.qmd
docs/src/examples/: build_signed_edges.qmd  build_signed_edges.quarto_ipynb
docs/src/reference/: PriorData.qmd  get_smiles.qmd
examples/: gp_example.py  hmdb_rag_example.py  kegg_reaction_priors.ipynb  use_build_signed_edges.py  visualization_demo.ipynb  visualization_example.py
examples/models/: __init__.py  gp.py
notebooks/notebooks/: mtsbl1-analysis.py
output/: gp_results.csv
presentations/: gw.scss  header.tex  jsm-2025.html  jsm-2025.qmd  jsm-2025.tex  jsm-2025_speaker-notes.qmd  references.bib
presentations/theme/: colortheme.sty
scripts/: analyze_llm_reasoning.py  benchmark_prior_recovery.py  check_deep_research_predictions.py  comprehensive_regularization_test.py  create_accuracy_points_plot.py  create_predictive_boxplot.py  evaluate_prior_performance.py  evaluate_prior_performance_simple.py  inspect_llm_groups.py  load_mtb_data.py  predictive_performance_benchmark.py  study_shrinkage.py  test_empirical_bayes.py  test_hierarchical_shrinkage.py  test_mapping_issue.py  test_mapping_simple.py  test_prior_strength.py  validate_implementation.py  visualize_bias_variance.py  viz.R
src/apriomics/: __init__.py  build_signed_edges.py  cli.py  hmdb_utils.py  kegg_utils.py  kegg_utils_extended.py  literature.py  llm-lasso.py  visualization.py
src/apriomics/data/: __init__.py
src/apriomics/models/: __init__.py
src/apriomics/priors/: __init__.py  base.py  graph_priors.py
src/apriomics/rag/: __init__.py  hmdb_parser.py  hmdb_parser_focused.py  retriever.py  simple_hmdb_scraper.py  vector_builder.py
src/apriomics/utils/: macos_fixes.py  smiles.py
tests/: hmdb_context_test.py  test_graph_priors.py  test_hmdb_utils.py  test_priors_base.py  test_priors_hmdb_integration.py
