[project]
name = "apriomics"
version = "0.1.0"
description = "A Python package for generating chemical similarity priors for Bayesian models"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "autoelicit>=0.1.15",
    "dspy>=2.6.13",
    "faiss-cpu>=1.8.0.post1",
    "google-genai>=1.10.0",
    "google-generativeai>=0.8.5",
    "ipywidgets>=8.1.7",
    "map4>=1.1.3",
    "matplotlib>=3.9.4",
    "mhfp>=1.9.6",
    "numba==0.56.4",
    "numpy>=1.23.5",
    "pandas>=2.1.0",
    "plotly>=6.1.1",
    "rdkit>=2024.9.6",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
    "skglm>=0.4",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/yourusername/apriomics"
Issues = "https://github.com/yourusername/apriomics/issues"

[tool.setuptools.packages.find]
where = ["src"]


[dependency-groups]
dev = [
    "accelerate>=1.8.1",
    "arviz>=0.17.1",
    "jupyter>=1.1.1",
    "mypy>=1.16.1",
    "pymc>=5.12.0",
    "pytest>=8.3.5",
    "quartodoc>=0.9.1",
    "ruff>=0.12.2",
    "scipy<1.13",
    "seaborn>=0.13.2",
    "types-requests>=2.32.4.20250611",
]


